tests/NormalTests/paczka1/fuzzy1/22060051.err
Error in line 4: vVSo A748 30,6
Error in line 5: vVSo S604 25,8
Error in line 6: EEu24Kyux8 A789 72,2
Error in line 9: EEu24Kyux8 A748 26,0
Error in line 31: pduBkWda A748 26,4
